<resources>
    <string name="app_name">PomodoroTimer</string>
    <string name="standardTime">25:00</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="shortBreak">Short Break</string>
    <string name="longBreak">Long Break</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="pomodoroTitle">Pomodoro Timer</string>
    <string name="pomodoroTime">Pomodoro</string>
    <string name="shortTime">Short Break</string>
    <string name="longTime">Long Break</string>
    <string name="apply">Apply</string>
    <string name="settingsTitle">Settings</string>
    <string name="darkTheme">DarkTheme</string>
    <string name="settings_button">Settings button</string>
    <string name="close_button">close button</string>
    <string name="zero_hour">00:00</string>

<!--    Notification-->


    <string name="channel_name">1</string>
    <string name="channel_description">Used to finish timer.</string>
    <string name="notification">Notification Enabled</string>

</resources>